# farmhash

./: .gitignore  .travis.yml  CHANGES.md  FarmHash.html  README.md  doc-index.html  farmhash.cabal  index-frames.html  index.html  mini_FarmHash.html
bench/: bench-farmhash.hs
benchmark/: index.html
cbits/: farmhash_c.cc
include/: farmhash_c.h
scripts/: update-gh-pages.sh
src/: FarmHash.hs
src/FarmHash/: Internal.hs
test/: FarmHashSpec.hs
