name:                farmhash
version:             0.1.0.0
synopsis:            Fast hash functions.
description:
    This package provides bindings to the farmhash library.
    .
    FarmHash is a family of very fast hash functions (see
    <https://code.google.com/p/farmhash/>). They are not suitable for
    cryptography.
    .
    This package bundles the library with it so there are no external
    dependencies.
homepage:            https://github.com/abhinav/haskell-farmhash
license:             BSD3
license-file:        LICENSE
author:              Abhinav Gupta
maintainer:          mail@abhinavg.net
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    include/*.h
    README.md
    CHANGES.md

library
  exposed-modules  : FarmHash
  other-modules    : FarmHash.Internal
  build-depends    : base >= 4.7 && < 4.8
                   , bytestring
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall
  include-dirs     : include
  includes         : farmhash_c.h
  cc-options       : -g -O2
  c-sources        : cbits/farmhash.cc
                   , cbits/farmhash_c.cc
